# CrossFluf

./: Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
docs/: RANGER-FINANCE-VAULTS.md  STABLEHACKS-HACKATHON.md  TOKEN-2022-KYC-STABLECOIN.md
programs/kyc_hook/: Cargo.toml
programs/kyc_hook/src/: lib.rs
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
skills/: crossfluf-fee-harvest-vault.md  crossfluf_flashloan_arb.md
stablecoin/: cli.ts  package.json  pnpm-lock.yaml  rebalance-bot.ts  tsconfig.json  vault-cli.ts
tests/: kyc_stablecoin.ts  vault.ts
