[package]
name = "kyc_hook"
version = "0.1.0"
description = "Token-2022 Transfer Hook for KYC-compliant stablecoin"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-discriminator = "0.4"
solana-program = "=2.1.0"
